FreeST/test/Programs/ValidTests/SessionTypes/sendAndWait/sendAndWait.fst
main : ()
main =
  forkWith @(!Int ; Wait) @Int (receiveAndClose @Int)
  |>
  sendAndWait @Int 5
