FreeST/test/Programs/InvalidTests/forkLinExp/forkLinExp.fst
main : Int
main = fork (new !Int)
